[package]
name = "sol-rpc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.124"
anyhow = "1.0.86"
serde = { version = "1.0.207", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.3"
csv = "1.3.0"